[tool.poetry]
name = "merrill_feature"
version = "0.0.1"
description = "Standard feature engineering package"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "merrill_feature"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"